--- a/tela_inicial.html
+++ b/tela_inicial.html
@@ -11,7 +11,7 @@
         body {
             margin: 0;
             height: 100vh;
-            background: linear-gradient(135deg, #00ff5e, #00891e); /* Gradiente de azul */
+            background: linear-gradient(135deg, #920eea, #000a02);
             font-family: 'Arial', sans-serif;
             display: flex;
             justify-content: center;
@@ -27,7 +27,7 @@
             width: 180px;
             height: 180px;
             border-radius: 50%;
-            border: 5px solid #00c6ff;
+            border: 5px solid #00c8ff00;
             margin-bottom: 30px;
             overflow: hidden;
         }
@@ -84,7 +84,7 @@
 <body>
     <!-- Container para a foto -->
     <div class="photo-container">
-        <img src="img.png" alt="Foto de Perfil">
+        <img src="logo.png" alt="Foto de Perfil">
     </div>
 
     <h1>Seja bem-vindo ao First Place</h1>
